tests/executable/errors/Sveta/9040_9211.c
int main() {
	int a=2,b=3;
	a/=a/b;
	printid(a);
	return 0;
}
